style menu__link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content header__content">
           <img src="./images/logo.png" alt="" class="header__logo">
           <ul class="header__menu">
-            <li>
+            <li >
               <a href="#" class="header__link">Главная</a>
             </li>
             <li>
@@ -35,8 +35,8 @@
           </ul>
         </div>
       </header>
-      <main class="main" style="padding-top: 110px;">
-        <div class="content">
+      <main class="main">
+        <div class="content main__content">
           <div class="description">
             <h1 class="description__title">ПУТЕШЕСТВИЕ</h1>
             <p class="description__subtitle">на красню планету</p>
